add ipam for network

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,6 +46,9 @@ volumes:
 networks:
   galera_network:
     driver: overlay
+    ipam:
+      config:
+        - subnet: 10.0.10.0/24
 
 secrets:
   xtrabackup_password:
