--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,8 +43,8 @@ services:
           - node.role == manager
     secrets:
       - xtrabackup_password
-    healthcheck:
-      <<: *healthcheck
+#    healthcheck:
+#      <<: *healthcheck
 
 volumes:
   mysql-data:
