--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
 version: '3.9'
 
 services:
-  seed:
-    image: colinmollenhour/mariadb-galera-swarm:10.8.3-2022-08-16
+  seed: &default_service
+    image: colinmollenhour/mariadb-galera-swarm:10.11.6-2023-12-09
     env_file:
       - .env
     environment:
@@ -11,40 +11,33 @@ services:
       - MYSQL_ROOT_PASSWORD_FILE=/run/secrets/mysql_root_password
     networks:
       - galera_network
-    command: seed
     volumes:
       - mysql-data:/var/lib/mysql
     secrets:
       - xtrabackup_password
       - mysql_password
       - mysql_root_password
-    healthcheck: &healthcheck
+    command: seed
+    healthcheck:
       test: [ "CMD-SHELL", "mysqladmin ping -h 127.0.0.1 -uroot -p$MYSQL_ROOT_PASSWORD || exit 1" ]
       interval: 30s
       timeout: 10s
       retries: 5
 
   node:
-    image: colinmollenhour/mariadb-galera-swarm:10.8.3-2022-08-16
+    <<: *default_service
+    command: node tasks.seed,tasks.node
     environment:
-      - XTRABACKUP_PASSWORD_FILE=/run/secrets/xtrabackup_password
       - NODE_ADDRESS=^10.0.*.*
       - HEALTHY_WHILE_BOOTING=1
-    networks:
-      - galera_network
-    command: node tasks.seed,tasks.node
-    volumes:
-      - mysql-data:/var/lib/mysql
     deploy:
       replicas: 0
       placement:
         max_replicas_per_node: 1
         constraints:
           - node.role == manager
-    secrets:
-      - xtrabackup_password
-#    healthcheck:
-#      <<: *healthcheck
+    healthcheck: # Отключаем healthcheck для node
+      test: []
 
 volumes:
   mysql-data:
