--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.9'
 
 networks:
   galera_network:
-    external: true
+    attachable: true
     driver: overlay
     ipam:
       config:
