--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,6 +45,7 @@ services:
         max_replicas_per_node: 1
         constraints:
           - node.role == manager
+          - node.labels.role == node-{{.Task.Slot}}
     healthcheck: # Отключаем healthcheck для node
       test: []
 
