--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ networks:
 
 services:
   seed: &default_service
-    image: colinmollenhour/mariadb-galera-swarm:10.4.32-2023-12-09
+    image: colinmollenhour/mariadb-galera-swarm:10.11.1-rc-2022-11-22
     env_file:
       - .env
     environment:
