--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,8 @@
 version: '3.9'
 
-networks:
-  galera_network:
-    name: galera_network
-    attachable: true
-    driver: overlay
-    ipam:
-      config:
-        - subnet: 10.0.10.0/24
-
 services:
-  seed: &default_service
-    image: colinmollenhour/mariadb-galera-swarm:10.11.1-rc-2022-11-22
+  seed:
+    image: colinmollenhour/mariadb-galera-swarm:10.11.6-2023-12-09
     env_file:
       - .env
     environment:
@@ -20,38 +11,53 @@ services:
       - MYSQL_ROOT_PASSWORD_FILE=/run/secrets/mysql_root_password
     networks:
       - galera_network
+    command: seed
     volumes:
       - mysql-data:/var/lib/mysql
     secrets:
       - xtrabackup_password
       - mysql_password
       - mysql_root_password
-    command: seed
-    healthcheck:
+    healthcheck: &healthcheck
       test: [ "CMD-SHELL", "mysqladmin ping -h 127.0.0.1 -uroot -p$MYSQL_ROOT_PASSWORD || exit 1" ]
       interval: 30s
       timeout: 10s
       retries: 5
 
   node:
-    <<: *default_service
-    command: node tasks.seed,tasks.node
+    image: colinmollenhour/mariadb-galera-swarm:10.11.6-2023-12-09
     environment:
+      - XTRABACKUP_PASSWORD_FILE=/run/secrets/xtrabackup_password
       - NODE_ADDRESS=^10.0.*.*
       - HEALTHY_WHILE_BOOTING=1
+    networks:
+      - galera_network
+    command: node tasks.seed,tasks.node
+    volumes:
+      - mysql-data:/var/lib/mysql
     deploy:
       replicas: 0
       placement:
         max_replicas_per_node: 1
         constraints:
           - node.role == manager
-    healthcheck: # Отключаем healthcheck для node
-      test: []
+    secrets:
+      - xtrabackup_password
+#    healthcheck:
+#      <<: *healthcheck
 
 volumes:
   mysql-data:
     name: '{{.Service.Name}}-{{.Task.Slot}}-data'
     driver: local
+
+networks:
+  galera_network:
+    name: galera_network
+    driver: overlay
+    ipam:
+      config:
+        - subnet: 10.0.10.0/24
 
 secrets:
   xtrabackup_password:
